Clean up project structure a bit. Known issue with itchio iframe scaling especially on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,13 @@
 :root {
   --storm: #00181B;
   --storm-plus: #004651;
+  --storm-afternoon: #00697a;
   --cyan: #00FFE0;
   --hazYellow: #fbff00;
   --cream: #f8eed3;
 
   --background: var(--storm);
+  --midground: var(--storm-afternoon);
   --maincolor: var(--cyan);
 
   font-family: Inter, sans-serif;
@@ -46,8 +48,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-image: radial-gradient(var(--background) .95px, transparent .95px),radial-gradient(var(--storm-plus) .95px, var(--background) .95px);
-  background-size: 38px 38px;
-  background-position: 0 0, 19px 19px;
+  background-size: 2rem 2rem;
+  background-position: 0 0, 1rem 1rem;
 }
 
 h1 {
@@ -71,6 +73,16 @@ p {
   text-align: justify;
 }
 
+a {
+  color: var(--background);
+  text-decoration: none;
+  transition: color 0.2s ease, border-color 0.2s ease;
+}
+
+a:hover {
+  color: var(--cream);
+}
+
 /* Socials */
 
 .socials-grid {
@@ -85,7 +97,7 @@ p {
   /* padding: 2em; */
   /* border: 1px solid var(--maincolor); */
   /* border-radius: 10px; */
-  background-color: var(--background);
+  /* background-color: var(--background); */
   text-align: center;
 }
 
@@ -106,15 +118,29 @@ Retrieved 2026-06-10, License - CC BY-SA 4.0
 
 .wrapper {
   width: 100%;
-  max-width: 530px;
   height: 100%;
   margin: 0 auto;
   background: #CCC
 }
 
+.wrapper-yt {
+  max-width: 530px;
+}
+
+.wrapper-itch {
+  max-width: 550px;
+}
+
 .h_iframe {
   position: relative;
+}
+
+.h_iframe-yt {
   padding-top: 56%;
+}
+
+.h_iframe-itch {
+  padding-top: 30%;
 }
 
 .h_iframe iframe {
@@ -123,6 +149,8 @@ Retrieved 2026-06-10, License - CC BY-SA 4.0
   left: 0;
   width: 100%;
   height: 100%;
+
+  border: 0;
 }
 
 /* Sections */
@@ -135,8 +163,7 @@ section {
   border-radius: 10px;
 }
 
-.title,
-.title a {
+.title {
   margin: 0;
   padding: clamp(0.5rem, 4vw, 2rem);
   color: var(--background);
@@ -170,23 +197,28 @@ section {
 .header-menu {
   display: flex;
   justify-content: left;
-  gap: 3rem;
+  gap: clamp(1rem, 5vw, 3rem);
   padding: 1rem 0;
   list-style: none;
   margin: 0;
 }
 
-.header-menu a {
+.header-menu a,
+.header-menu p {
   text-decoration: none;
-  color: var(--cream);
   font-size: min(24pt, 4vw);
   transition: color 0.2s ease, border-color 0.2s ease;
 }
 
+.header-menu p {
+  color: var(--midground);
+}
+
+.header-menu a,
 .header-menu a:visited {
-  color: var(--cyan);
+  color: var(--maincolor)
 }
 
 .header-menu a:hover {
-  color: white;
+  color: var(--cream);
 }
